[#70] Change Search action label to Go for entering tag codes

--- a/client/dashboard/scenes/patients/scan-patient.component.html
+++ b/client/dashboard/scenes/patients/scan-patient.component.html
@@ -29,7 +29,7 @@
             <div class="form-group">
               <input [(ngModel)]="pin" id="pin" name="pin" type="number" class="form-control"/>
             </div>
-            <button type="submit" class="btn btn-sm btn-primary" i18n>Search</button>
+            <button type="submit" class="btn btn-sm btn-primary" i18n>Go</button>
           </fieldset>
         </form>
       </div>
