[#67] Hide Patient search until implemented

--- a/client/dashboard/scenes/scene-patients.component.html
+++ b/client/dashboard/scenes/scene-patients.component.html
@@ -25,9 +25,9 @@
         <option value="priority" i18n>Triage Priority</option>
       </select>
     </div>
-    <div class="toolbar-item toolbar-item--search">
+    <!-- <div class="toolbar-item toolbar-item--search">
       <input id="search" name="search" i18n-placeholder placeholder="Search" type="text" class="form-control form-control--search" />
-    </div>
+    </div> -->
   </div>
   <div class="patients">
     <ng-container *ngFor="let patient of scene.patients$|async">
