--- a/client/assets/css/site.scss
+++ b/client/assets/css/site.scss
@@ -52,6 +52,7 @@ h2 {
   color: $greyPeakBlue;
 }
 
+h1,
 h3 {
   font-weight: 600;
   font-size: 2.25rem;
@@ -70,7 +71,9 @@ h4 span {
   font-weight: normal;
 }
 
-p {
+p,
+ol,
+ul {
   font-size: 0.875rem;
   line-height: 1.0625rem;
   margin-bottom: 1rem;
