--- a/views/admin/layout.ejs
+++ b/views/admin/layout.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title><%= title %> - <%= process.env.APP_NAME %></title>
+    <title><%= locals.title ? `${title} - ` : '' %><%= process.env.APP_NAME %></title>
     <link rel="stylesheet" href="/libraries/bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" href="/libraries/fontawesome/css/all.css" />
     <link rel="stylesheet" href="/stylesheets/admin.css">
