--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -17,8 +17,11 @@
           <li><a href="https://github.com/peakresponse"><img src="/images/github.png" alt="Github" /></a></li>
         </ul>
       </div>
+      <div class="col-md-2 order-md-3">
+        <a href="https://accountablehq.com"><img id="footer__seal" src="/images/accountable.png" alt="HIPPA Compliant Seal of Compliance Powered by Accountable" /></a>
+      </div>
       <div class="text-md-left col-md-2 order-md-1">
-        <img src="/images/logo.png" alt="Peak Response Logo" />
+        <img id="footer__logo" src="/images/logo.png" alt="Peak Response Logo" />
       </div>
       <div id="footer__copyright" class="text-md-right col-md-12 order-md-3">
         Copyright &copy; 2020 Peak Response Inc. All rights reserved.
