[#75] Terms of Service

--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -8,6 +8,7 @@
           <li><a href="/#story">Our Story</a></li>
           <li><a href="/#contact">Contact Us</a></li>
           <li><a href="/privacy">Privacy Policy</a></li>
+          <li><a href="/terms">Terms of Service</a></li>
         </ul>
         <ul id="footer_icons">
           <li><a href="https://www.linkedin.com/company/peak-response-inc/"><img src="/images/linkedin.png" alt="LinkedIn" /></a></li>
