--- a/views/index.ejs
+++ b/views/index.ejs
@@ -120,7 +120,9 @@
         </div>
         <div class="col-lg-9">
           <h4>Chief Ray Lehr<span>&nbsp;&nbsp;|&nbsp;&nbsp;Advisor</span>&nbsp;&nbsp;<a href="https://www.linkedin.com/in/ray-lehr-331789a/"><i class="fab fa-linkedin"></i></a></h4>
-          <p>Chief Ray Lehr has worked in public safety for over four decades. As a fire chief and incident commander, he has first hand knowledge of the needs of first responders at mass casualty events. For the past 10 years he has supported the development of new technologies to help public safety improve their operations to increase efficiency and save lives. Ray is passionate about public safety and innovation and is excited to join the Peak Response team. Working with smart developers like Francis and Britt who are driven to help solve technology problems for first responders is a wonderful opportunity to do good for our communities.</p>
+          <p>Chief Ray Lehr has worked in public safety for over four decades. As a fire chief and incident commander, he has first hand knowledge of the needs of first responders at mass casualty events. For the past 10 years he has supported the development of new technologies to help public safety improve their operations to increase efficiency and save lives. Ray is passionate about public safety and innovation and is excited to join the Peak Response team.</p>
+          <p class="story__quote">Working with smart developers like Francis and Britt who are driven to help solve technology problems for first responders is a wonderful opportunity to do good for our communities.</p>
+          <p class="story__quote-attribution">&mdash; Chief Ray Lehr</p>
         </div>
       </div>
     </div>
