--- a/views/index.ejs
+++ b/views/index.ejs
@@ -125,6 +125,17 @@
           <p class="story__quote-attribution">&mdash; Chief Ray Lehr</p>
         </div>
       </div>
+      <div class="row">
+        <div class="col-lg-3">
+          <img src="/images/bio-charlie.jpg" alt="Portrait of Charlie Fair">
+        </div>
+        <div class="col-lg-9">
+          <h4>Lieutenant Charlie Fair<span>&nbsp;&nbsp;|&nbsp;&nbsp;Advisor</span>&nbsp;&nbsp;<a href="https://www.linkedin.com/in/charlie-fair-659918191/"><i class="fab fa-linkedin"></i></a></h4>
+          <p>Lieutenant Charlie Fair brings over 30 years of EMS, public safety, and government experience to the Peak Response team. He has unique interdisciplinary expertise and likes to say that he speaks both &ldquo;public safety&rdquo; and &ldquo;information technology.&rdquo; Lt Fair responded to many local disasters, mass casualty incidents (MCI), and tornadoes during his career and is now passionate about contributing to technology innovation in the public safety space.</p>
+          <p class="story__quote">I am excited to be working with Peak Response to help get this life-impacting technology into the hands of the responders.</p>
+          <p class="story__quote-attribution">&mdash; Lt Charlie Fair</p>
+        </div>
+      </div>
     </div>
     <div class="solution__screenshot bg-white">
       <div class="container">
