--- a/client/dashboard/scenes/patients/modal.scss
+++ b/client/dashboard/scenes/patients/modal.scss
@@ -8,6 +8,7 @@
 
 .modal__navigation {
   display: flex;
+  flex-shrink: 0;
   align-items: center;
   height: 4.5rem;
   padding: 0 1.5rem;
@@ -27,6 +28,7 @@
 
 .modal__bar {
   @include copy-l-regular;
+  flex-shrink: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -48,10 +50,10 @@
 
 .modal__header {
   display: flex;
-  align-items: center;
+  flex-direction: column;
   position: relative;
-  padding: 0 3.5rem;
-  height: 13.75rem;
+  padding: 1.5rem 3.5rem 0;
+  height: 23.75rem;
   background-color: $bgBackground;
 }
 
