--- a/client/dashboard/scenes/patients/patient.component.scss
+++ b/client/dashboard/scenes/patients/patient.component.scss
@@ -1,8 +1,12 @@
 @import '../../../assets/css/variables';
 
+.modal__body {
+  padding-top: 0;
+}
+
 .patient__priority {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   z-index: 0;
 }
 
@@ -22,13 +26,30 @@
   padding: 1.375rem 2rem 1.4325rem;
 }
 
+.patient__priority-container {
+  flex: 1;
+  margin-right: 0.5rem;
+}
+
+.patient__priority-before-transport {
+  @include copy-s-regular;
+  margin-top: 0.75rem;
+  text-align: center;
+
+  .btn-priority {
+    margin-top: 0.25rem;
+    opacity: 0.6;
+    padding: 0.875rem 2rem 0.9325rem;
+  }
+}
+
 .patient__priority--noneditable .btn-priority {
   margin-left: 0;
-  flex: 1;
+  width: 100%;
 }
 
 .patient__actions {
-  flex: 5;
+  flex: 4;
   .btn-outline-primary {
     margin: 0 0.5rem;
   }
@@ -68,7 +89,6 @@
 .btn-priority--5 {
   background-color: $peakBlue;
   color: white;
-  margin-right: 0;
 }
 
 .btn-record {
@@ -152,10 +172,60 @@
 
 .patient__actions {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
 
   .btn-outline-primary {
     margin-right: 0.75rem;
+    margin-top: 0.25rem;
+  }
+}
+
+.patient__transport {
+  background-color: $bgBackground;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 1.5rem 3.5rem;
+
+  h4 {
+    margin-bottom: 1rem;
+  }
+
+  .toolbar {
+    justify-content: flex-start;
+    .toolbar-item:first-child {
+      width: 60%;
+    }
+    .toolbar-item + .toolbar-item {
+      flex: 1;
+    }
+  }
+
+  .col-md-6:first-child {
+    padding-right: 2rem;
+  }
+
+  .col-md-6:last-child {
+    padding-left: 2rem;
+  }
+}
+
+.facility__distance {
+  color: $greyPeakBlue;
+}
+
+.patient__transport-actions {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+
+  .btn {
+    margin-top: 0.75rem;
+  }
+
+  .btn-group .btn {
+    margin-top: 0;
   }
 }
 
@@ -164,18 +234,12 @@
   .patient__photo {
     background-color: $immediateRed;
   }
-  .modal__header {
-    background-color: $lightImmediateRed;
-  }
 }
 
 .patient--1 {
   .modal__bar,
   .patient__photo {
     background-color: $delayedYellow;
-  }
-  .modal__header {
-    background-color: $lightDelayedYellow;
   }
 }
 
@@ -184,9 +248,6 @@
   .patient__photo {
     background-color: $minimalGreen;
   }
-  .modal__header {
-    background-color: $lightMinimalGreen;
-  }
 }
 
 .patient--3 {
@@ -194,18 +255,12 @@
   .patient__photo {
     background-color: $expectGrey;
   }
-  .modal__header {
-    background-color: $lightExpectGrey;
-  }
 }
 
 .patient--4 {
   .modal__bar,
   .patient__photo {
     background-color: $deadBlack;
-  }
-  .modal__header {
-    background-color: $lightDeadBlack;
   }
 }
 
@@ -215,7 +270,7 @@
     background-color: $peakBlue;
   }
   .modal__header {
-    background-color: $lightPeakBlue;
+    height: 28.75rem;
   }
 }
 
