[#86] Update app link in welcome email

--- a/emails/welcome/text.ejs
+++ b/emails/welcome/text.ejs
@@ -8,9 +8,9 @@ You can access your account on the web at:
 
 <%= agencyUrl %>
 
-And you can sign up to test our pre-release iPhone app here:
+And you can download the iPhone app here:
 
-https://testflight.apple.com/join/MXQBXfPF
+https://apps.apple.com/us/app/peak-response/id1532180261
 
 Cheers, 
 The Peak Response Team
