--- a/client/dashboard/users/invite-users.component.html
+++ b/client/dashboard/users/invite-users.component.html
@@ -29,8 +29,7 @@
               </div>
             </div>
           </div>
-          <div class="modal-footer">
-            <button [disabled]="isLoading" (click)="onMore()" class="btn btn-sm btn-outline-primary d-none d-lg-flex" type="button"><i class="peakicon peakicon-add"></i> Add More</button>
+          <div class="modal-footer justify-content-end">
             <button [disabled]="isLoading || !isValid" type="submit" class="btn btn-md btn-primary" i18n>Invite</button>
           </div>
         </fieldset>
