[#65] Handle Scene closed by another client

--- a/client/dashboard/scenes/scene-map.component.html
+++ b/client/dashboard/scenes/scene-map.component.html
@@ -104,3 +104,4 @@
   </div>
 </app-dashboard-main>
 <router-outlet name="modal"></router-outlet>
+<app-dashboard-scene-closer></app-dashboard-scene-closer>
