--- a/client/dashboard/scenes/scene-overview.component.html
+++ b/client/dashboard/scenes/scene-overview.component.html
@@ -151,3 +151,4 @@
     <p i18n>Once you transfer, you will no longer be able to edit the scene overview or close the scene.</p>
   </div>
 </app-shared-modal>
+<app-dashboard-scene-closer></app-dashboard-scene-closer>
