--- a/client/dashboard/scenes/scene-patients.component.html
+++ b/client/dashboard/scenes/scene-patients.component.html
@@ -37,3 +37,4 @@
   </div>
 </app-dashboard-main>
 <router-outlet name="modal"></router-outlet>
+<app-dashboard-scene-closer></app-dashboard-scene-closer>
