--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -300,6 +300,34 @@ section .row {
   text-align: center;
 }
 
+#blog {
+  min-height: inherit !important;
+}
+
+.article {
+  margin-bottom: 1rem;
+}
+
+.article .card {
+  border: 0;
+  border-radius: 0;
+  box-shadow: 0px 6px 10px rgba(118, 140, 151, 0.15);
+  height: 100%;
+  text-decoration: none !important;
+}
+
+.article .card-img-top {
+  border-radius: 0;
+}
+
+.article .card-subtitle {
+  margin-bottom: 1rem;
+}
+
+.article .card-text {
+  color: #3d5058;
+}
+
 #contact {
   display: flex;
   flex-direction: column;
