--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -14,6 +14,9 @@
             <a class="nav-link" href="/#solution">Our Solution</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/#blog">Blog</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/#story">Our Story</a>
           </li>
           <li class="nav-item">
