--- a/client/dashboard/scenes/new-scene.component.html
+++ b/client/dashboard/scenes/new-scene.component.html
@@ -10,7 +10,11 @@
       <div class="row location">
         <div class="col-lg-4 location__gps">
           <div class="form-group">
-            <span i18n>GPS Location:</span> {{data.lat|number:'1.0-4'}}<span *ngIf="data.lat">, </span>{{data.lng|number:'1.0-4'}}
+            <span i18n>GPS Location:</span>
+            <div *ngIf="!data.lat || !data.lng" class="spinner-grow spinner-grow-sm align-baseline mx-1" role="status">
+              <span class="sr-only">Loading...</span>
+            </div>
+            {{data.lat|number:'1.0-4'}}<span *ngIf="data.lat">, </span>{{data.lng|number:'1.0-4'}}
           </div>
         </div>
         <div class="col-lg-3 location__city">
