[#94] Scale Agency Dashboard for smaller browsers

--- a/client/dashboard/app.component.html
+++ b/client/dashboard/app.component.html
@@ -1,1 +1,3 @@
-<router-outlet></router-outlet>
+<div class="app" [style.width]="width" [style.height]="height" [style.transform]="transform">
+  <router-outlet></router-outlet>
+</div>
