--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
     <meta name="description" content="Peak Response is an MCI management system for EMS professionals.">
     <meta name="author" content="Peak Response Inc.">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
